Update for Spoon assembly with JDK 11 (.class file version 55) instead of JDK 17 (.class file version 61)